--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html lang="he">
 <head>
   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+  
   <title>טיימר ועישון</title>
   <style>
     body {
       font-family: Heebo, Arial, sans-serif;
       background: linear-gradient(135deg, #6a5af9, #7f6dfc);
       color: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh; /* תופס את כל הגובה */
-      margin: 0;
       text-align: center;
+      padding: 40px;
     }
     h1 {
       margin-bottom: 20px;
@@ -22,7 +19,6 @@
     .stats {
       margin: 20px 0;
       font-size: 1.2em;
-      line-height: 1.8em;
     }
     button {
       margin: 10px;
@@ -95,12 +91,14 @@
       smokeCount++;
       document.getElementById("smokeCount").innerText = smokeCount;
 
+      // בדיקה אם שברתי שיא
       if (currentStreak > bestStreak) {
         bestStreak = currentStreak;
         document.getElementById("bestStreak").innerText = bestStreak;
         alert("כל הכבוד! שברת שיא חדש: " + bestStreak + " טיימרים רצופים!");
       }
-      currentStreak = 0;
+
+      currentStreak = 0; // אפס אחרי שנשברתי
     }
   </script>
 </body>
