--- a/index.html
+++ b/index.html
@@ -1,151 +1,95 @@
-<!DOCTYPE html>
-<html lang="he">
+<!doctype html>
+<html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>טיימר ועישון</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>טיימר + מונה עישון</title>
   <style>
-    body {
-      font-family: Heebo, Arial, sans-serif;
-      background: linear-gradient(135deg, #6a5af9, #7f6dfc);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-    }
-    .app {
-      max-width: 400px;
-    }
-    h1 {
-      margin-bottom: 20px;
-    }
-    .stats {
-      margin: 20px 0;
-      font-size: 1.2em;
-      line-height: 1.8em;
-    }
-    button {
-      margin: 10px;
-      padding: 12px 20px;
-      font-size: 1.1em;
-      border: none;
-      border-radius: 12px;
-      background: #70e1a1;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    button:hover {
-      background: #57c98a;
-    }
-    #timer {
-      margin-top: 20px;
-      font-size: 2em;
-      font-weight: bold;
-    }
+    body { font-family: Arial, sans-serif; text-align:center; background:#f6f7fb; margin:0; padding:40px; }
+    h1 { margin-bottom:20px; }
+    #time { font-size:48px; margin:20px 0; }
+    button { font-size:20px; padding:12px 24px; margin:10px; border:0; border-radius:8px; cursor:pointer; }
+    .primary { background:#2563eb; color:#fff; }
+    .warn { background:#f59e0b; color:#111; }
+    .box { background:#fff; display:inline-block; padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,.1); margin-top:20px; }
   </style>
 </head>
 <body>
-  <div class="app">
-    <h1>מעקב טיימרים ועישון</h1>
+  <h1>טיימר גדל + מונה עישון יומי</h1>
 
-    <div class="stats">
-      טיימרים שהפעלתי: <span id="timerCount">0</span><br>
-      סך הכל עישנתי: <span id="smokeCount">0</span><br>
-      שיא טיימרים לפני שנשברתי: <span id="bestStreak">0</span>
-    </div>
+  <div class="box">
+    <div id="time">מוכן (4 שעות)</div>
+    <button id="startBtn" class="primary">התחל טיימר</button>
+  </div>
 
-    <button onclick="startTimer()">הפעל טיימר (15 דק')</button>
-    <button onclick="smoked()">עישנתי</button>
-
-    <div id="timer">00:00</div>
+  <div class="box">
+    <h2>🚬 מונה עישון יומי</h2>
+    <div id="smokeCount">0</div>
+    <button id="smokeBtn" class="warn">עישנתי</button>
   </div>
 
   <script>
-    let timerCount = 0;
-    let smokeCount = 0;
-    let bestStreak = 0;
-    let currentStreak = 0;
-    let timer;
-    let endTime = null;
+    // === טיימר ===
+    const startBtn = document.getElementById("startBtn");
+    const timeEl = document.getElementById("time");
+    let duration = +localStorage.getItem("timerMinutes") || 240; // התחל מ־4 שעות
+    let endTime = null, interval = null;
 
-    // טוען נתונים מהאחסון
-    window.onload = function() {
-      if(localStorage.getItem("timerCount")) {
-        timerCount = parseInt(localStorage.getItem("timerCount"));
-        document.getElementById("timerCount").innerText = timerCount;
+    function format(ms){
+      const total = Math.max(0, Math.floor(ms/1000));
+      const h = String(Math.floor(total/3600)).padStart(2,"0");
+      const m = String(Math.floor((total%3600)/60)).padStart(2,"0");
+      const s = String(total%60).padStart(2,"0");
+      return `${h}:${m}:${s}`;
+    }
+
+    function updateTimer(){
+      if(!endTime) return;
+      const remain = endTime - Date.now();
+      if(remain <= 0){
+        clearInterval(interval); interval=null; endTime=null;
+        duration += 10; // הגדלה של 10 דק’
+        localStorage.setItem("timerMinutes", duration);
+        timeEl.textContent = `⏰ נגמר! הבא יהיה ${duration} דקות`;
+        return;
       }
-      if(localStorage.getItem("smokeCount")) {
-        smokeCount = parseInt(localStorage.getItem("smokeCount"));
-        document.getElementById("smokeCount").innerText = smokeCount;
-      }
-      if(localStorage.getItem("bestStreak")) {
-        bestStreak = parseInt(localStorage.getItem("bestStreak"));
-        document.getElementById("bestStreak").innerText = bestStreak;
-      }
-      if(localStorage.getItem("endTime")) {
-        endTime = parseInt(localStorage.getItem("endTime"));
-        resumeTimer();
-      }
+      timeEl.textContent = format(remain);
+    }
+
+    startBtn.onclick = ()=>{
+      if(endTime) return; // כבר רץ
+      endTime = Date.now() + duration*60000;
+      interval = setInterval(updateTimer, 500);
+      updateTimer();
     };
 
-    function saveData() {
-      localStorage.setItem("timerCount", timerCount);
-      localStorage.setItem("smokeCount", smokeCount);
-      localStorage.setItem("bestStreak", bestStreak);
-      if (endTime) {
-        localStorage.setItem("endTime", endTime);
-      } else {
-        localStorage.removeItem("endTime");
-      }
+    // === מונה עישון יומי ===
+    const smokeBtn = document.getElementById("smokeBtn");
+    const smokeCountEl = document.getElementById("smokeCount");
+
+    function getTodayKey(){
+      const d = new Date();
+      return d.toISOString().slice(0,10); // YYYY-MM-DD
     }
 
-    function startTimer() {
-      if (timer) clearInterval(timer);
-      endTime = Date.now() + (15 * 60 * 1000); // זמן סיום ב־milliseconds
-      timerCount++;
-      currentStreak++;
-      document.getElementById("timerCount").innerText = timerCount;
-      saveData();
-      resumeTimer();
+    function loadSmoke(){
+      const today = getTodayKey();
+      const data = JSON.parse(localStorage.getItem("smokeData")||"{}");
+      if(!data[today]) data[today]=0;
+      localStorage.setItem("smokeData", JSON.stringify(data));
+      smokeCountEl.textContent = data[today];
     }
 
-    function resumeTimer() {
-      if (!endTime) return;
-      if (timer) clearInterval(timer);
-
-      timer = setInterval(() => {
-        let remaining = Math.floor((endTime - Date.now()) / 1000);
-        if (remaining <= 0) {
-          clearInterval(timer);
-          document.getElementById("timer").innerText = "נגמר!";
-          endTime = null;
-          saveData();
-        } else {
-          let minutes = Math.floor(remaining / 60);
-          let seconds = remaining % 60;
-          document.getElementById("timer").innerText =
-            String(minutes).padStart(2, '0') + ":" + String(seconds).padStart(2, '0');
-        }
-      }, 1000);
+    function incSmoke(){
+      const today = getTodayKey();
+      const data = JSON.parse(localStorage.getItem("smokeData")||"{}");
+      data[today] = (data[today]||0)+1;
+      localStorage.setItem("smokeData", JSON.stringify(data));
+      smokeCountEl.textContent = data[today];
     }
 
-    function smoked() {
-      smokeCount++;
-      document.getElementById("smokeCount").innerText = smokeCount;
-
-      if (currentStreak > bestStreak) {
-        bestStreak = currentStreak;
-        document.getElementById("bestStreak").innerText = bestStreak;
-        alert("כל הכבוד! שברת שיא חדש: " + bestStreak + " טיימרים רצופים!");
-      }
-
-      currentStreak = 0;
-      endTime = null;
-      saveData();
-    }
+    smokeBtn.onclick = incSmoke;
+    loadSmoke();
   </script>
 </body>
 </html>
