--- a/index.html
+++ b/index.html
@@ -1,122 +1,155 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>טיימר + מונה עישון יומי</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>מנהל עישון</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align:center; background:#f6f7fb; margin:0; padding:40px; }
-    h1 { margin-bottom:20px; }
-    #time { font-size:48px; margin:20px 0; }
-    #endAt { font-size:18px; color:#555; margin-top:8px; }
-    button { font-size:20px; padding:12px 24px; margin:10px; border:0; border-radius:8px; cursor:pointer; }
-    .primary { background:#2563eb; color:#fff; }
-    .warn { background:#f59e0b; color:#111; }
-    .box { background:#fff; display:inline-block; padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,.1); margin-top:20px; }
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f6f6f6;
+      margin-top: 40px;
+      direction: rtl;
+    }
+    button {
+      padding: 12px 24px;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      background: #4CAF50;
+      color: white;
+      cursor: pointer;
+      transition: background 0.2s;
+      box-shadow: 0 2px 10px #0001;
+    }
+    button:active {
+      background: #388E3C;
+    }
+    button:disabled {
+      background: #aaa;
+      cursor: not-allowed;
+      opacity: 0.7;
+    }
+    .info {
+      font-size: 20px;
+      margin: 15px 0;
+      color: #333;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 1px 4px #0001;
+      display: inline-block;
+      padding: 10px 22px;
+    }
+    h1 {
+      color: #4CAF50;
+      margin-bottom: 32px;
+      font-size: 2.2em;
+      letter-spacing: 2px;
+      text-shadow: 0 2px 10px #4CAF5020;
+    }
+    #timer {
+      font-weight: bold;
+      color: #E64A19;
+    }
   </style>
 </head>
 <body>
-  <h1>טיימר גדל + מונה עישון יומי</h1>
 
-  <div class="box">
-    <div id="time">מוכן (4 שעות)</div>
-    <div id="endAt"></div>
-    <button id="startBtn" class="primary">התחל טיימר</button>
-  </div>
+  <h1>מנהל עישון</h1>
 
-  <div class="box">
-    <h2>🚬 מונה עישון יומי</h2>
-    <div id="smokeCount">0</div>
-    <button id="smokeBtn" class="warn">עישנתי</button>
-  </div>
+  <div class="info">מספר פארשים נוכחי: <span id="parsh">0</span></div>
+  <div class="info">סה״כ עישונים: <span id="count">0</span></div>
+  <div class="info">טיימר: <span id="timer">מוכן לעישון</span></div>
+
+  <button id="smokeBtn">עישנתי</button>
 
   <script>
-    // ===== טיימר =====
-    const startBtn = document.getElementById("startBtn");
-    const timeEl = document.getElementById("time");
-    const endAtEl = document.getElementById("endAt");
+    const smokeBtn = document.getElementById("smokeBtn");
+    const timerLabel = document.getElementById("timer");
+    const countLabel = document.getElementById("count");
+    const parshLabel = document.getElementById("parsh");
 
-    let duration = +localStorage.getItem("timerMinutes") || 60; // התחלה 4 שעות
-    let endTime = +localStorage.getItem("timerEnd") || null;
-    let interval = null;
+    // קריאה מה-localStorage
+    let count = parseInt(localStorage.getItem("count")) || 0;
+    let startDate = localStorage.getItem("startDate");
+    let timerEnd = localStorage.getItem("timerEnd");
 
-    function format(ms){
-      const total = Math.max(0, Math.floor(ms/1000));
-      const h = String(Math.floor(total/3600)).padStart(2,"0");
-      const m = String(Math.floor((total%3600)/60)).padStart(2,"0");
-      const s = String(total%60).padStart(2,"0");
-      return `${h}:${m}:${s}`;
+    // אם אין תאריך התחלה – נשמור חדש
+    if (!startDate) {
+      startDate = new Date().toISOString();
+      localStorage.setItem("startDate", startDate);
     }
 
-    function formatHour(ts){
-      const d = new Date(ts);
-      return d.toLocaleTimeString("he-IL",{hour:"2-digit",minute:"2-digit"});
+    // כמה פארשים להתחיל איתם
+    const startParsh = 3; // אפשר לשנות אם תרצה
+
+    // פונקציה לחישוב ימים שעברו
+    function daysSinceStart() {
+      const diff = new Date() - new Date(startDate);
+      return Math.floor(diff / (1000 * 60 * 60 * 24));
     }
 
-    function updateTimer(){
-      if(!endTime) return;
-      const remain = endTime - Date.now();
-      if(remain <= 0){
-        clearInterval(interval); interval=null; endTime=null;
-        duration += 30; // מוסיפים 10 דק' לבא
-        localStorage.setItem("timerMinutes", duration);
+    // עדכון פארשים
+    function updateParsh() {
+      const parsh = startParsh + Math.floor(daysSinceStart() / 3);
+      parshLabel.textContent = parsh;
+      return parsh;
+    }
+
+    // טיימר
+    let timerInterval;
+    function startTimer(seconds) {
+      const endTime = Date.now() + seconds * 1000;
+      localStorage.setItem("timerEnd", endTime);
+      timerEnd = endTime;
+
+      smokeBtn.disabled = true;
+      updateTimer();
+      timerInterval = setInterval(updateTimer, 1000);
+    }
+
+    function updateTimer() {
+      const endTime = parseInt(localStorage.getItem("timerEnd"));
+      const remaining = endTime - Date.now();
+
+      if (remaining <= 0 || isNaN(endTime)) {
+        clearInterval(timerInterval);
         localStorage.removeItem("timerEnd");
-        timeEl.textContent = `⏰ נגמר! הבא יהיה ${duration} דקות`;
-        endAtEl.textContent = "";
+        timerLabel.textContent = "מוכן לעישון";
+        smokeBtn.disabled = false;
         return;
       }
-      timeEl.textContent = format(remain);
-      endAtEl.textContent = "יסתיים בשעה: " + formatHour(endTime);
+
+      const minutes = Math.floor(remaining / 60000);
+      const seconds = Math.floor((remaining % 60000) / 1000);
+      timerLabel.textContent = `${minutes}:${seconds.toString().padStart(2, '0')}`;
+      smokeBtn.disabled = true;
     }
 
-    startBtn.onclick = ()=>{
-      if(endTime) return; // כבר רץ
-      endTime = Date.now() + duration*60000;
-      localStorage.setItem("timerEnd", endTime);
-      interval = setInterval(updateTimer, 500);
-      updateTimer();
-    };
+    // כפתור עישנתי
+    smokeBtn.addEventListener("click", () => {
+      count++;
+      localStorage.setItem("count", count);
+      countLabel.textContent = count;
+      updateParsh();
+      startTimer(3600); // שעה
+    });
 
-    // שחזור מצב טיימר אם היה רץ
-    if(endTime && endTime > Date.now()){
-      interval = setInterval(updateTimer, 500);
+    // בעת טעינה
+    countLabel.textContent = count;
+    updateParsh();
+
+    // המשך טיימר אם קיים
+    if (timerEnd && Date.now() < parseInt(timerEnd)) {
+      timerInterval = setInterval(updateTimer, 1000);
       updateTimer();
+      smokeBtn.disabled = true;
     } else {
-      endTime = null;
-      timeEl.textContent = `מוכן (${duration} דקות)`;
-      endAtEl.textContent = "";
+      timerLabel.textContent = "מוכן לעישון";
+      smokeBtn.disabled = false;
     }
-
-    // ===== מונה עישון יומי =====
-    const smokeBtn = document.getElementById("smokeBtn");
-    const smokeCountEl = document.getElementById("smokeCount");
-
-    function getTodayKey(){
-      const d = new Date();
-      // cutoff = היום ב-04:00
-      const cutoff = new Date(d.getFullYear(), d.getMonth(), d.getDate(), 4, 0, 0);
-      if(d < cutoff){ cutoff.setDate(cutoff.getDate() - 1); }
-      return cutoff.toISOString().slice(0,10);
-    }
-
-    function loadSmoke(){
-      const key = getTodayKey();
-      const data = JSON.parse(localStorage.getItem("smokeData")||"{}");
-      if(!data[key]) data[key]=0;
-      localStorage.setItem("smokeData", JSON.stringify(data));
-      smokeCountEl.textContent = data[key];
-    }
-
-    function incSmoke(){
-      const key = getTodayKey();
-      const data = JSON.parse(localStorage.getItem("smokeData")||"{}");
-      data[key] = (data[key]||0)+1;
-      localStorage.setItem("smokeData", JSON.stringify(data));
-      smokeCountEl.textContent = data[key];
-    }
-
-    smokeBtn.onclick = incSmoke;
-    loadSmoke();
   </script>
+
 </body>
 </html>
